# FLUTE

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
circuit_analysis/: analysis_results.json
crates/aligned-vec/: Cargo.toml  README.md
crates/aligned-vec/src/: lib.rs
crates/bitpolymul/: Cargo.toml  README.md
crates/bitpolymul-sys/: Cargo.toml  README.md  build.rs
crates/bitpolymul-sys/bitpolymul2/: Makefile  README.md  bc.c  bc.h  bc_to_lch_gen_code.c  bc_to_mono_gen_code.c  benchmark.h  bitmat_prod.h  bitpolymul-test  bitpolymul-test.cpp  bitpolymul.c  bitpolymul.h  btfy.c  btfy.h  butterfly_net.c  butterfly_net.h  byte_inline_func.h  config_profile.h  encode.c  encode.h  gf2128_cantor_iso.c  gf2128_cantor_iso.h  gf264_cantor_iso.c  gf264_cantor_iso.h  gfext_aesni.c  gfext_aesni.h  run_test.sh  ska.h  transpose.h  transpose_bit.h  trunc_btfy_tab.c  trunc_btfy_tab.h  trunc_btfy_tab_64.c  trunc_btfy_tab_64.h
crates/bitpolymul-sys/src/: lib.rs
crates/bitpolymul-sys/src/bindings/: bc.rs  bitpolymul.rs  btfy.rs  encode.rs  gfext_aesni.rs  mod.rs
crates/bitpolymul/src/: lib.rs
crates/flute_benchmark/: Cargo.toml  README.md
crates/flute_benchmark/src/: lib.rs
crates/flute_benchmark/to_eval/: sbox8.lut
crates/flute_benchmark/to_eval/operators/greater_than_recursive/: gtr_128.lut  gtr_16.lut  gtr_32.lut  gtr_64.lut  gtr_8.lut
crates/flute_benchmark/to_eval/operators/ladner-fischer/adder/: lfa128.lut  lfa16.lut  lfa256.lut  lfa32.lut  lfa64.lut  lfa8.lut
crates/flute_benchmark/to_eval/operators/ladner-fischer/multiplier/: lfmul128.lut  lfmul16.lut  lfmul32.lut  lfmul64.lut  lfmul8.lut
crates/flute_benchmark/to_eval/operators/ladner-fischer/subtracter/: lfs128.lut  lfs16.lut  lfs256.lut  lfs32.lut  lfs64.lut  lfs8.lut
crates/flute_benchmark/to_eval/operators/ripple-carry/adder/: rca128.lut  rca16.lut  rca256.lut  rca32.lut  rca64.lut  rca8.lut
crates/flute_benchmark/to_eval/operators/ripple-carry/multiplier/: rcmul128.lut  rcmul16.lut  rcmul32.lut  rcmul4.lut  rcmul64.lut  rcmul8.lut
crates/flute_benchmark/to_eval/operators/ripple-carry/subtracter/: rcs128.lut  rcs16.lut  rcs256.lut  rcs32.lut  rcs64.lut  rcs8.lut
crates/gmw/: Cargo.toml
crates/gmw-macros/: Cargo.toml
crates/gmw-macros/src/: lib.rs  sub_circuit.rs
crates/gmw/src/: common.rs  errors.rs  evaluate.rs  executor.rs  lib.rs  private_test_utils.rs  share_wrapper.rs  utils.rs
crates/gmw/src/circuit/: base_circuit.rs  builder.rs  mod.rs
crates/gmw/src/mul_triple/: insecure_provider.rs  mod.rs  ot_ext.rs  silent_ot.rs  trusted_provider.rs  trusted_seed_provider.rs
crates/gmw/src/parse/: aby.rs  bristol.rs  lut_circuit.rs  mod.rs
crates/gmw/src/protocols/: aby2_lut.rs  boolean_gmw.rs  mod.rs
crates/gmw/test_resources/bristol-circuits/: sha-256-low_depth.txt
crates/gmw/test_resources/lut_circuits/: Sample LUT file.lut  minimal.lut
crates/gmw/tests/: boolean_aby2.rs  bristol.rs  mt_providers.rs  share_wrapper.rs
crates/mpc-channel/: Cargo.toml
crates/mpc-channel-macros/: Cargo.toml
crates/mpc-channel-macros/src/: lib.rs
crates/mpc-channel/src/: in_memory.rs  lib.rs  tcp.rs  util.rs
crates/zappot/: Cargo.toml  README.md  build.rs
crates/zappot/benches/: bench_main.rs
crates/zappot/benches/benchmarks/: aes_rng.rs  mod.rs  ot_ext.rs  silent_ot.rs  transpose.rs
crates/zappot/c_transpose/: sse_transpose.c
crates/zappot/examples/: README.md  alsz_ot_extension.rs  co_base_ot.rs  silent_ot.rs
crates/zappot/src/: lib.rs  traits.rs
crates/zappot/src/base_ot/: mod.rs
crates/zappot/src/ot_ext/: mod.rs
crates/zappot/src/silent_ot/: mod.rs  pprf.rs  quasi_cyclic_encode.rs  silver_encode.rs
crates/zappot/src/util/: aes_hash.rs  aes_rng.rs  block.rs  mod.rs  tokio_rayon.rs  transpose.rs
libs/libote-sys/: Cargo.toml  build.rs
libs/libote-sys/src/: SilverBridge.h  lib.rs
libs/remoc/remoc/src/codec/: bincode.rs
