[package]
name = "flute_benchmark"
version = "0.1.0"
edition = "2021"

[features]
silent_ot_silver = ["zappot/silent_ot_silver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
csv = "1.1.6"
chrono = "0.4.23"
gmw = {path = "../gmw"}
zappot = {path = "../zappot"}
mpc-channel = {path = "../mpc-channel"}
walkdir = "2.3.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"]}
clap = { version = "4.0.18", features = ["derive"] }
tracing-appender = "0.2.2"
tokio = { version = "1.21.2", features = ["full"]}
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"